@@ -71,6 +71,8 @@ Fixed
   primary selection support (e.g. Windows/macOS).
 - Crash when there's a feature permission request from Qt with an invalid URL
   (which seems to happen with Qt 5.15 sometimes).
+- Crash in rare cases where QtWebKit/QtWebEngine imports fail in unexpected
+  ways.
 - `:config-write-py` now works with paths starting with `~/...` again.
 - New site-specific quirk for a missing `globalThis` in Qt <= 5.12 on Reddit and Spotify
 
